# PR-22.101_Dmitriev_SystemProgramming_FastAPI

FApiProject/: alembic.ini  api.py  config.py  models.py  pyproject.toml  response_models.py
FApiProject/alembic/: env.py
FApiProject/alembic/versions/: 188e79797577_db_creation.py  887cec43346a_db_creation.py  a7ae2644aae0_db_creation.py
